# python-project-52

./: Makefile  README.md  pyproject.toml
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: headers.css
task_manager/: data.py  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: test_user.json
task_manager/labels/: admin.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: delete_form.html  form.html  index.html  login.html  main.html  navigation.html
task_manager/templates/labels/: labels.html
task_manager/templates/statuses/: statuses.html
task_manager/templates/tasks/: tasks.html  tasks_show.html
task_manager/templates/users/: create_user.html  delete_user.html  update_user.html  user.html
task_manager/tests/: tests.py
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
