[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["leilanimoone <leilanimoone@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
python-dotenv = "^1.0.0"
flake8 = "^4.0.1"
dj-database-url = "^2.0.0"
django-bootstrap4 = "^23.1"
gunicorn = "^20.1.0"
whitenoise = "^6.5.0"
psycopg2-binary = "^2.9.6"
django-filter = "^23.2"
rollbar = "^0.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
